<resources>
    <string name="app_name">WebBrowserApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="url">URL</string>
    <string name="next">next</string>
    <string name="back">back</string>
    <string name="go">go</string>
    <string name="new_page">new page</string>
    <string name="bookmark_list">bookmark list</string>
    <string name="bookmark">bookmark</string>
    <string name="close">Close</string>
    <string name="delete">delete</string>
    <string name="share">Share</string>
</resources>