<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageControlFragment">

    <EditText
        android:id="@+id/editTextURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:ems="10"
        android:hint="@string/url"
        android:importantForAutofill="no"
        android:inputType="textUri" />

    <ImageButton
        android:id="@+id/imageButtonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:contentDescription="@string/next"
        android:src="@android:drawable/ic_media_next" />

    <ImageButton
        android:id="@+id/imageButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:contentDescription="@string/back"
        android:src="@android:drawable/ic_media_previous" />

    <ImageButton
        android:id="@+id/imageButtonGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/go"
        android:src="@android:drawable/ic_menu_search" />

</FrameLayout>