<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BrowserControlFragment">

    <ImageButton
        android:id="@+id/bookmarkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/bookmark"
        android:src="@android:drawable/btn_star_big_off" />

    <ImageButton
        android:id="@+id/bookmarkListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:contentDescription="@string/bookmark_list"
        android:src="@android:drawable/ic_input_get" />

    <ImageButton
        android:id="@+id/newPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:contentDescription="@string/new_page"
        android:src="@android:drawable/ic_input_add" />

</FrameLayout>